--- a/project.config
+++ b/project.config
@@ -1,6 +1,6 @@
 [access "refs/*"]
-        owner = group device_htc_maintainers
-		label-Verified = -1..+1 group device_htc_maintainers
+        owner = group android_device_htc_supersonic 
+                label-Verified = -1..+1 group android_device_htc_supersonic 
 [receive]
         requireChangeId = true
 [submit]
